<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.fimatas.home</groupId>
	<artifactId>Home</artifactId>
	<version>DEV</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version> <!-- tomcat-embed-core und lombok version in users ggf anheben! -->
		<relativePath />
	</parent>
	
	<properties>
		<!-- Encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Java -->
		<java.version>25</java.version>
		<!-- Dependency versions -->
		<de.fimatas.users.version>1.0.3</de.fimatas.users.version>
		<commons-io.version>2.19.0</commons-io.version>
		<commons-text.version>1.12.0</commons-text.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<pushy.version>0.15.4</pushy.version>
		<!-- Webjars versions -->
		<webjars-locator.version>1.1.3</webjars-locator.version>
		<bootstrap.version>5.3.3</bootstrap.version>
		<jquery.version>3.7.1</jquery.version>
		<font-awesome.version>6.5.2</font-awesome.version>
		<marked.version>17.0.1</marked.version>
		<soundar24-roundSlider.version>1.6.1-1</soundar24-roundSlider.version>
		<!-- Plugin versions -->
		<StaticResourceProcessing.version>1.5.3</StaticResourceProcessing.version>
		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
		<dependency-check-maven.version>7.0.4</dependency-check-maven.version>
		<maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
		<bouncycastle.version>1.84</bouncycastle.version> <!-- version in users abgleichen! -->
		<commons-net.version>3.11.1</commons-net.version>
		<assertj.version>3.27.7</assertj.version>
		<hap-java.version>2.0.1</hap-java.version>
		<zxing.version>3.5.3</zxing.version>
		<heatpumpdriver.version>5.1.0</heatpumpdriver.version>
		<resilience4j.version>2.2.0</resilience4j.version>
		<oshi-core-ffm.version>7.2.1</oshi-core-ffm.version>
		<commons-compress.version>1.28.0</commons-compress.version>
		<archjunit.version>1.4.2</archjunit.version>
	</properties>

	<modules>
		<module>homelibrary</module>
		<module>homecontroller</module>
		<module>homeclient</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>de.fimatas</groupId>
				<artifactId>users-api</artifactId>
				<version>${de.fimatas.users.version}</version>
			</dependency>
			<dependency>
				<groupId>de.fimatas</groupId>
				<artifactId>users-impl</artifactId>
				<version>${de.fimatas.users.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${commons-text.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons-collections4.version}</version>
			</dependency>
			<dependency>
				<groupId>com.eatthepath</groupId>
				<artifactId>pushy</artifactId>
				<version>${pushy.version}</version>
			</dependency>
			<dependency>
				<groupId>com.luckycatlabs</groupId>
				<artifactId>SunriseSunsetCalculator</artifactId>
				<version>1.2</version>
			</dependency>
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>${commons-net.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>bootstrap</artifactId>
				<version>${bootstrap.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>jquery</artifactId>
				<version>${jquery.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>font-awesome</artifactId>
				<version>${font-awesome.version}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.npm</groupId>
				<artifactId>marked</artifactId>
				<version>${marked.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>webjars-locator-lite</artifactId>
				<version>${webjars-locator.version}</version>
			</dependency>
			<dependency>
				<groupId>web</groupId>
				<artifactId>soundar24-roundSlider</artifactId>
				<version>${soundar24-roundSlider.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>de.fimatas</groupId>
				<artifactId>HeatpumpDriverInterface</artifactId>
				<version>${heatpumpdriver.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-circuitbreaker</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.oshi</groupId>
				<artifactId>oshi-core-ffm</artifactId>
				<version>${oshi-core-ffm.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>${commons-compress.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.tukaani</groupId>
				<artifactId>xz</artifactId>
				<version>1.11</version>
			</dependency>
			<dependency>
				<groupId>com.tngtech.archunit</groupId>
				<artifactId>archunit-junit5</artifactId>
				<version>${archjunit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.tngtech.archunit</groupId>
				<artifactId>archunit-junit5-api</artifactId>
				<version>${archjunit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-dependency-convergence</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<dependencyConvergence>
									<uniqueVersions>true</uniqueVersions>
								</dependencyConvergence>
							</rules>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<rules>
						<dependencyConvergence>
							<uniqueVersions>true</uniqueVersions>
						</dependencyConvergence>
					</rules>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>